Fix routing for GitHub Pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "coffee-cycle-studio",
+  "homepage": "https://anhoffice.github.io/CoffeeForm/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
